# openwebui-classification-examples

./: .env.example  .gitignore  README.md  langchain_classification.py  langchain_rag_classification.py  list_models.py  litellm_classification.py  openai_classification.py  pyproject.toml  requirements.txt
examples/: langchain_classification.py  litellm_classification.py  requests_classification.py
